--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@ window.location.href = "https://t.me/allinonereborn_backup";
 ██║░░██║███████╗██████╦╝╚█████╔╝██║░░██║██║░╚███║
 ╚═╝░░╚═╝╚══════╝╚═════╝░░╚════╝░╚═╝░░╚═╝╚═╝░░╚══╝
 #EXTM3U
-#EXTINF:-1 tvg-id="" group-title="Join🤖@allinonereborn" group-logo="https://i.ibb.co/RYsYthb/Screenshot-2024-01-08-172016.png" tvg-logo="https://i.ibb.co/RYsYthb/Screenshot-2024-01-08-172016.png" ,t.me/allinonereborn
+#EXTINF:-1 tvg-id="" group-title="Join🤖@allinone_reborn" group-logo="https://i.ibb.co/RYsYthb/Screenshot-2024-01-08-172016.png" tvg-logo="https://i.ibb.co/RYsYthb/Screenshot-2024-01-08-172016.png" ,t.me/allinonereborn
 https://embed-cloudfront.wistia.com/deliveries/f9c6180d9602d3bd40a42f14434d55d77242f945.m3u8
 #EXTM3U x-tvg-url="https://avkb.short.gy/jioepg.xml.gz"
 #EXTM3U x-tvg-url="https://raw.githubusercontent.com/mitthu786/tvepg/main/tataplay/epg.xml.gz"
